--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Init
       run: |
-        chmod -R 777 ./IBM_Cloud_CLI/
+        chmod -R 777 ./reload/
     - name: Login IBM Cloud
       env:
         IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNT }}
